updated app name and removed parent nnt nav for games1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">koh</string>
+    <string name="app_name">KÖH</string>
 
     <string name="emotion_def">blank definition</string>
     <string name="happy_def">Happiness is a positive emotion filled with pleasure and joy. It makes you feel good.</string>
