centered and enlarged video; enmade text fully display

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="angry_scenario3">You don\'t like something</string>
     <string name="angry_pair">sad</string>
 
-    <string name="sad_def">Sadness is an emotional pain associated with, or characterized by, feelings of disadvantage, loss, despair, grief, helplessness, disappointment and sorrow.</string>
+    <string name="sad_def">Sadness is an emotional pain associated with feelings of disadvantage, loss, despair, grief, helplessness and disappointment.</string>
     <string name="sad_des">The video shows what sadness looks like </string>
     <string name="sad_scenario1">Your chest feels heavy</string>
     <string name="sad_scenario2">You may feel like crying</string>
